--- a/utils/roles/alacritty/tasks/main.yml
+++ b/utils/roles/alacritty/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: check installed
-  ansible.builtin.command: alacritty -V
+  ansible.builtin.command: ~/.cargo/bin/alacritty -V
   register: version
   changed_when: false
   failed_when: false
