--- a/vm-utils/galaxy.yml
+++ b/vm-utils/galaxy.yml
@@ -1,7 +1,7 @@
 ---
 namespace: x_delfino
 name: vm_utils
-version: 0.0.1
+version: 0.0.2
 description: collection of virtual machine utilities
 tags: []
 authors: delfino
@@ -13,9 +13,9 @@ license_file: ''
 
 dependencies: {}
 
-repository: https://github.com/x-delfino/ansible-vmutils
-documentation: https://github.com/x-delfino
-homepage: https://github.com/x-delfino
+repository: https://github.com/x-delfino/ansible-collections/tree/main/vm-utils
+documentation: https://github.com/x-delfino/ansible-collections/tree/main/vm-utils
+homepage: https://github.com/x-delfino/ansible-collections
 issues: https://github.com/x-delfino/ansible-vm-utils/issues
 
 build_ignore: []
