adding linux requirement

--- a/vm-utils/roles/vagrant_sudo/tasks/main.yml
+++ b/vm-utils/roles/vagrant_sudo/tasks/main.yml
@@ -1,10 +1,4 @@
 ---
-- name: "{{ 'add ' + username + ' to sudoers' }}"
-  community.general.sudoers:
-    name: "{{ '99_' + username }}"
-    commands: ALL
-    nopassword: true
-    user: "{{ username }}"
-  become: true
-  vars:
-    ansible_become_password: "{{ password }}"
+- hosts: all
+  include_tasks: configure.yml
+  when: ansible_system == "Linux"
