cross platform work

--- a/jobs/roles/whiteout/tasks/main.yml
+++ b/jobs/roles/whiteout/tasks/main.yml
@@ -1,42 +1,4 @@
 ---
-- name: create tmp dir for root
-  ansible.builtin.tempfile:
-    suffix: -clean
-    state: file
-  register: root_tmp
-  become: true
-
-- name: whiteout root
-  ansible.builtin.shell:
-    cmd: >
-      dd
-      if=/dev/zero
-      "{{ 'of=' + root_tmp.path }}"
-      bs=1M;
-      rm
-      -rf
-      "{{ root_tmp.path }}"
-  changed_when: true
-  failed_when: false
-  become: true
-
-- name: create tmp dir for boot
-  ansible.builtin.tempfile:
-    suffix: -clean
-    state: file
-  register: boot_tmp
-  become: true
-
-- name: whiteout boot
-  ansible.builtin.shell:
-    cmd: >
-      dd
-      if=/dev/zero
-      "{{ 'of=' + boot_tmp.path }}"
-      bs=1M;
-      rm
-      -rf
-      "{{ boot_tmp.path }}"
-  changed_when: true
-  failed_when: false
-  become: true
+- name: configure for Linux
+  include_tasks: whiteout.yml
+  when: ansible_system == "Linux"
