--- a/jobs/roles/upgrade_image/tasks/main.yml
+++ b/jobs/roles/upgrade_image/tasks/main.yml
@@ -1,7 +1,4 @@
 ---
-- name: upgrade linux image
-  ansible.builtin.apt:
-    name: linux-image-{{ ansible_kernel }}
-    state: latest
-    update_cache: true
-  become: true
+- name: configure for Linux
+  include_tasks: upgrade.yml
+  when: ansible_system == "Linux"
