cross platform work

--- a/vm-utils/roles/parallels_tools/tasks/main.yml
+++ b/vm-utils/roles/parallels_tools/tasks/main.yml
@@ -1,13 +1,4 @@
 ---
-- name: check if installed
+- name: install for linux
   when: ansible_system == 'Linux'
-  ansible.builtin.file:
-    path: /usr/lib/parallels-tools/version
-    state: file
-  register: installed
-  failed_when: false
-  changed_when: false
-
-- name: install
-  import_tasks: install_linux.yml
-  when: installed.state == 'absent'
+  import_tasks: linux.yml
