--- a/win-cfg/roles/winrm_config/tasks/main.yml
+++ b/win-cfg/roles/winrm_config/tasks/main.yml
@@ -1,27 +1,27 @@
 ---
 - name: quick config
-  ansible.windows.win_shell: winrm quickconfig -q
+  ansible.windows.win_command: winrm quickconfig -q
   register: winrm_quickconfig
   changed_when: >
     winrm_quickconfig.stdout_lines[0] !=
     "WinRM service is already running on this machine."
 
 - name: set max memory per shell
-  ansible.windows.win_shell: |
+  ansible.windows.win_command: |
     winrm set winrm/config/winrs @{MaxMemoryPerShellMB="512"}
   register: winrm_maxmemory
 
 - name: set max timeout
-  ansible.windows.win_shell: |
+  ansible.windows.win_command: |
     winrm set winrm/config @{MaxTimeoutms="1800000"}
   register: winrm_maxtimeout
 
 - name: set allow unencrypted
-  ansible.windows.win_shell: |
+  ansible.windows.win_command: |
     winrm set winrm/config/service @{AllowUnencrypted="true"}
   register: winrm_unencrypted
 
 - name: set basic auth
-  ansible.windows.win_shell: |
+  ansible.windows.win_command: |
     winrm set winrm/config/service/auth @{Basic="true"}
   register: winrm_basicauth
