--- a/win-cfg/roles/winrm_config/tasks/main.yml
+++ b/win-cfg/roles/winrm_config/tasks/main.yml
@@ -1,24 +1,34 @@
 ---
 - name: quick config
-  ansible.windows.win_command: winrm quickconfig -q
+  ansible.windows.win_command: .\winrm.cmd quickconfig -q
+  args:
+    chdir: c:\windows\system32
   register: winrm_quickconfig
 
 - name: set max memory per shell
   ansible.windows.win_command: |
-    winrm set winrm/config/winrs @{MaxMemoryPerShellMB="512"}
+    .\winrm.cmd set winrm/config/winrs @{MaxMemoryPerShellMB="512"}
+  args:
+    chdir: c:\windows\system32
   register: winrm_maxmemory
 
 - name: set max timeout
   ansible.windows.win_command: |
-    winrm set winrm/config @{MaxTimeoutms="1800000"}
+    .\winrm.cmd set winrm/config @{MaxTimeoutms="1800000"}
+  args:
+    chdir: c:\windows\system32
   register: winrm_maxtimeout
 
 - name: set allow unencrypted
   ansible.windows.win_command: |
-    winrm set winrm/config/service @{AllowUnencrypted="true"}
+    .\winrm.cmd set winrm/config/service @{AllowUnencrypted="true"}
+  args:
+    chdir: c:\windows\system32
   register: winrm_unencrypted
 
 - name: set basic auth
   ansible.windows.win_command: |
-    winrm set winrm/config/service/auth @{Basic="true"}
+    .\winrm.cmd set winrm/config/service/auth @{Basic="true"}
+  args:
+    chdir: c:\windows\system32
   register: winrm_basicauth
