--- a/win-cfg/roles/winrm_config/tasks/main.yml
+++ b/win-cfg/roles/winrm_config/tasks/main.yml
@@ -16,8 +16,12 @@
   register: winrm_maxmemory
 
 - name: set max timeout
-  ansible.windows.win_command: |
-    "{{ '.\winrm.cmd set winrm/config @{MaxTimeoutms=\"' + winrm_timeout + '\"}' }}"
+  ansible.windows.win_command: >
+    "{{
+      '.\winrm.cmd set winrm/config @{MaxTimeoutms=\"' +
+    winrm_timeout +
+    '\"}'
+    }}"
   args:
     chdir: c:\windows\system32
   register: winrm_maxtimeout
