--- a/win-cfg/roles/winrm_config/defaults/main.yml
+++ b/win-cfg/roles/winrm_config/defaults/main.yml
@@ -1,4 +1,6 @@
 ---
-winrm_max_mem: "512"
+winrm_maxmem: "512"
 winrm_timeout: "1800000"
 winrm_quickconfig: true
+winrm_unencrypted: true
+winrm_basicauth: true
