cross platform work

--- a/utils/roles/openssh_server/tasks/windows.yml
+++ b/utils/roles/openssh_server/tasks/windows.yml
@@ -1,6 +1,6 @@
 ---
 - name: install
-  ansible.windows.powershell:
+  ansible.windows.win_powershell:
     script: >
       Add-WindowsCapability -Online -Name
       (Get-WindowsCapability -Online |
