--- a/jobs/roles/upgrade_image/tasks/main.yml
+++ b/jobs/roles/upgrade_image/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
 - name: configure for Linux
-  include_tasks: upgrade.yml
+  include_tasks: linux.yml
   when: ansible_system == "Linux"
+
+- name: configure for windows
+  include_tasks: windows.yml
+  when: ansible_system == "Win32NT"
