--- a/utils/roles/neovim/tasks/main.yml
+++ b/utils/roles/neovim/tasks/main.yml
@@ -1,7 +1,8 @@
 ---
-- name: install
-  ansible.builtin.apt:
-    name: neovim
-    state: present
-    update_cache: true
-  become: true
+- name: apt install
+  when: ansible_system == 'Win32NT'
+  import_tasks: choco.yml
+
+- name: apt install
+  when: ansible_system == 'Linux'
+  import_tasks: apt.yml
