--- a/utils/roles/ps_script_analyzer/tasks/main.yml
+++ b/utils/roles/ps_script_analyzer/tasks/main.yml
@@ -1,12 +1,8 @@
 ---
-- name: check installed
-  ansible.builtin.command:
-    cmd: "pwsh -nop -noni -c '(get-module PSScriptAnalyzer -ListAvailable)'"
-  register: module
-  changed_when: false
-  failed_when: false
+- name: apt install
+  when: ansible_system == 'Win32NT'
+  import_tasks: windows.yml
 
-- name: install
-  when: module.stdout == ""
-  ansible.builtin.command:
-    cmd: "pwsh -nop -noni -c 'install-module PSScriptAnalyzer -Force'"
+- name: apt install
+  when: ansible_system == 'Linux'
+  import_tasks: core.yml
