--- a/utils/roles/ps_nuget/meta/main.yml
+++ b/utils/roles/ps_nuget/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   author: delfino
-  description: PSScriptAnalyzer
+  description: powershell nuget package provider
 
   license: GPL-2.0-or-later
 
@@ -17,4 +17,3 @@ galaxy_info:
 
 dependencies:
   - powershell
-  - ps_nuget
