--- a/utils/roles/ps_nuget/tasks/windows.yml
+++ b/utils/roles/ps_nuget/tasks/windows.yml
@@ -2,11 +2,11 @@
 - name: check installed
   ansible.windows.win_powershell:
     script: |
-      Get-PackageProvider NuGet -ListAvailable
+      Get-PackageProvider NuGet -ListAvailable -ErrorAction Ignore
   register: provider
 
 - name: install
-  when: provider.host_err != ""
+  when: provider.host_out != ""
   ansible.windows.win_powershell:
     script: |
       Install-PackageProvider NuGet -Force
