--- a/utils/roles/ps_nuget/tasks/windows.yml
+++ b/utils/roles/ps_nuget/tasks/windows.yml
@@ -6,7 +6,7 @@
   register: provider
 
 - name: install
-  when: provider.host_out != ""
+  when: provider.host_out == ""
   ansible.windows.win_powershell:
     script: |
       Install-PackageProvider NuGet -Force
