--- a/utils/roles/rust/tasks/main.yml
+++ b/utils/roles/rust/tasks/main.yml
@@ -1,10 +1,8 @@
 ---
-- name: check if installed
-  ansible.builtin.command: ~/.cargo/bin/rustc --version
-  register: version
-  failed_when: false
-  changed_when: false
+- name: apt install
+  when: ansible_system == 'Win32NT'
+  import_tasks: windows.yml
 
-- name: install
-  import_tasks: install.yml
-  when: version.rc != 0
+- name: apt install
+  when: ansible_system == 'Linux'
+  import_tasks: linux.yml
