--- a/utils/roles/neovim/tasks/main.yml
+++ b/utils/roles/neovim/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
 - name: apt install
+  when: ansible_system == 'Win32NT'
+  import_tasks: choco.yml
+
+- name: apt install
   when: ansible_system == 'Linux'
   import_tasks: apt.yml
