--- a/utils/roles/golang/tasks/main.yml
+++ b/utils/roles/golang/tasks/main.yml
@@ -1,10 +1,8 @@
 ---
-- name: check installed
-  ansible.builtin.command: /usr/local/go/bin/go version
-  register: version
-  changed_when: false
-  failed_when: false
+- name: apt install
+  when: ansible_system == 'Win32NT'
+  import_tasks: choco.yml
 
-- name: install
-  when: version.rc != 0
-  include_tasks: install.yml
+- name: apt install
+  when: ansible_system == 'Linux'
+  import_tasks: linux.yml
