--- a/utils/roles/rust_analyzer/tasks/main.yml
+++ b/utils/roles/rust_analyzer/tasks/main.yml
@@ -1,12 +1,8 @@
 ---
-- name: check if installed
-  ansible.builtin.file:
-    state: file
-    path: "{{ tools_dir + '/rust-analyzer' }}"
-  register: installed
-  failed_when: false
-  changed_when: false
+- name: apt install
+  when: ansible_system == 'Win32NT'
+  import_tasks: choco.yml
 
-- name: install
-  when: installed.state == 'absent'
-  include_tasks: install.yml
+- name: apt install
+  when: ansible_system == 'Linux'
+  import_tasks: linux.yml
