--- a/utils/playbooks/all.yml
+++ b/utils/playbooks/all.yml
@@ -11,7 +11,6 @@
     - curl
     - nnn
     - ohmyzsh
-    - python3_9_venv
     - tmux
     - tmuxp
     - tpm
@@ -29,6 +28,7 @@
     - neovim
     - powershell
     - ps_script_analyzer
-    - python
+    - py3_virutalenv
+    - python3
     - rust
     - rust_analyzer
