--- a/utils/roles/py3_virtualenv/meta/main.yml
+++ b/utils/roles/py3_virtualenv/meta/main.yml
@@ -1,16 +1,19 @@
 ---
 galaxy_info:
   author: delfino
-  description: python
+  description: python3 virtualenv
 
   license: GPL-2.0-or-later
 
   min_ansible_version: 2.1
 
   platforms:
-    - name: Windows
+    - name: Debian
+      versions: all
+    - name: GenericLinux
       versions: all
 
   galaxy_tags: []
 
-dependencies: []
+dependencies:
+  - x_delfino.utils.python3
