--- a/utils/roles/py3_virtualenv/tasks/windows.yml
+++ b/utils/roles/py3_virtualenv/tasks/windows.yml
@@ -2,4 +2,6 @@
 - name: install
   ansible.windows.win_command: pip3 install virtualenv --no-input
   register: install
-  changed_when: install.stdout_lines[0] is !match("Requirement already satisfied\: virtualenv*")
+  changed_when: >
+    install.stdout_lines[0] is
+    !match("Requirement already satisfied{{':'}} virtualenv*")
