--- a/utils/roles/py3_virtualenv/tasks/windows.yml
+++ b/utils/roles/py3_virtualenv/tasks/windows.yml
@@ -4,4 +4,4 @@
   register: install
   changed_when: >
     install.stdout_lines[0] is not
-    match("Requirement already satisfied* virtualenv*")
+    match("Requirement already satisfied{{':'}} virtualenv*")
