cross platform work

--- a/cloud/roles/ps_az/tasks/windows.yml
+++ b/cloud/roles/ps_az/tasks/windows.yml
@@ -7,7 +7,7 @@
   changed_when: false
 
 - name: install
-  when: module.output == ""
+  when: module.output == []
   ansible.windows.win_powershell:
     script: |
       Install-Module Az -Force
