--- a/cloud/roles/azure_cli/tasks/main.yml
+++ b/cloud/roles/azure_cli/tasks/main.yml
@@ -1,16 +1,8 @@
 ---
-- name: ensure python3, pip and virtualenv are installed
-  ansible.builtin.apt:
-    name:
-      - python3
-      - python3-pip
-      - virtualenv
-    state: present
-    update_cache: true
-  become: true
+- name: apt install
+  when: ansible_system == 'Win32NT'
+  import_tasks: windows.yml
 
-- name: install
-  ansible.builtin.pip:
-    name: az-cli
-    state: present
-    virtualenv: "{{ venv_dir + '/az-cli' }}"
+- name: apt install
+  when: ansible_system == 'Linux'
+  import_tasks: linux.yml
