--- a/cloud/roles/ps_az/tasks/windows.yml
+++ b/cloud/roles/ps_az/tasks/windows.yml
@@ -2,7 +2,7 @@
 - name: check installed
   ansible.windows.win_powershell:
     script: |
-      Get-Module Az -ListAvailable
+      Get-Module Az.* -ListAvailable
   register: module
   changed_when: false
 
